# portal

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  _config.yml  index.md
.github/workflows/: baseline-benchmark.yml  benchmarks.yml  build.yml  coverage.yml  rust.yml
_layouts/: bench.html  default.html
_pages/: bench.md
client/: Cargo.toml  README.md
client/src/: config.rs  macros.rs  main.rs  networking.rs  receive.rs  send.rs  wordlist.rs
dev/bench/: data.js
lib/: Cargo.toml  README.md
lib/benches/: receiving.rs  sending.rs
lib/src/: chunks.rs  errors.rs  file.rs  lib.rs  tests.rs
lib/src/protocol/: confirmation.rs  encrypted.rs  exchange.rs  mod.rs  tests.rs  transferinfo.rs
relay/: Cargo.toml  README.md
relay/src/: errors.rs  handlers.rs  logging.rs  main.rs  networking.rs  protocol.rs  tunnel.rs
relay/src/ffi/: mod.rs  splice.rs
src/client/: main.rs
src/relay/: handlers.rs  main.rs
