[package]
name = "portal"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portal-lib = { path = "../lib" }
anyhow = "1.0.32"
clap = "2.33.3"
rpassword = "5.0.0"
indicatif = "0.15.0"
colored = "2"
serde = "1.0.116"
confy = "0.4.0"
dns-lookup = "1.0.4"
directories = "3.0.1"