[package]
name = "portal-lib"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.116",features = ["derive"]}
bincode = "1.3.1"
mio = {version = "0.7", features = ["os-poll", "tcp"]}
anyhow = "1.0.32"
thiserror = "1.0.20"
memmap = "0.7.0"
spake2 = "0.2.0"
sha2 = "0.9.1"
hex = "0.4.2"
chacha20poly1305 = "0.6.0" # {version="0.6.0",features=["heapless"]}
rand = "0.7.3"
async-std = "1.6.5"
