[package]
name = "portal-relay"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
portal-lib = { path = "../lib" }
mio = "0.6.22" 
lazy_static = "1.4.0"
#uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0.32"
os_pipe = "0.9.2"
libc = "0.2.77" # splice syscall