[package]
name = "portal-relay"
version = "0.2.0"
authors = ["landhb <landhb@github>"]
edition = "2018"
description = """
The relay for Portal, a secure file transfer protocol.
"""
keywords = ["file-transfer", "spake2", "chacha20", "poly1305","wormhole"]
homepage = "https://github.com/landhb/portal"
documentation = "https://docs.rs/portal-client"
repository = "https://github.com/landhb/portal"
readme = "README.md"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
portal-lib = {path = "../lib",version = "0.2.0"}
mio = "0.6.22" 
anyhow = "1.0.32"
os_pipe = "0.9.2"
libc = "0.2.77" # splice syscall
daemonize = "0.4.1"
lazy_static = "1.4.0"
threadpool = "1.8.1"
#ipc-channel = "0.11.0"
mio-extras = "2.0.6"
env_logger = "0.9.0"
log = "0.4.14"